--- a/platformer.html
+++ b/platformer.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <canvas id="gameCanvas" width="800" height="400"></canvas>
+  <div class="platformer-controls">
+  <button onclick="moveLeft()" class="btn">←</button>
+  <button onclick="jump()" class="btn">↑</button>
+  <button onclick="moveRight()" class="btn">→</button>
+</div>
+
 
   <audio id="jump-sfx" src="assets/audio/jump.mp3"></audio>
   <audio id="heart-sfx" src="assets/audio/heart.mp3"></audio>
