--- a/platformer.html
+++ b/platformer.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/platformer.css" />
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="400"></canvas>
+  <canvas id="gameCanvas"></canvas>
   <div class="platformer-controls">
   <button onclick="moveLeft()" class="btn">←</button>
   <button onclick="jump()" class="btn">↑</button>
