--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <button id="start-btn">Start</button>
   </div>
 
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
+  <div class="game-wrapper">
+  <canvas id="gameCanvas"></canvas>
   <div class="dpad">
-  <button class="arrow up" onclick="setDirection('UP')">↑</button>
-  <div>
-    <button class="arrow left" onclick="setDirection('LEFT')">←</button>
-    <button class="arrow right" onclick="setDirection('RIGHT')">→</button>
+    <button class="arrow up" onclick="setDirection('UP')">↑</button>
+    <div>
+      <button class="arrow left" onclick="setDirection('LEFT')">←</button>
+      <button class="arrow right" onclick="setDirection('RIGHT')">→</button>
+    </div>
+    <button class="arrow down" onclick="setDirection('DOWN')">↓</button>
   </div>
-  <button class="arrow down" onclick="setDirection('DOWN')">↓</button>
 </div>
+
 
 
   <audio id="success-sfx" src="assets/audio/win.mp3"></audio>
