--- a/final.html
+++ b/final.html
@@ -25,12 +25,12 @@
         <div class="message-box" id="messageBox"></div>
 
         <div class="photo-frame">
-            <a href="birthday-person.jpeg" download="assets/images/her_photo.png">
-                <img src="assets/images/her_photo.png" alt="her" />
-            </a>
-            <a href="birthday-person.jpeg" download="assets/images/her.png">
-                <img src="assets/images/her.png" alt="her" />
-            </a>
+          <a href="assets/images/her_photo.png" download="her_photo.png">
+            <img src="assets/images/her_photo.png" alt="her" />
+          </a>
+          <a href="assets/images/her.png" download="her.png">
+            <img src="assets/images/her.png" alt="her" />
+          </a>
         </div>
         <button class="replay-button" onclick="location.href='index.html'">Replay from Start 🔁</button>
 
