--- a/final.html
+++ b/final.html
@@ -31,6 +31,9 @@
           <a href="assets/images/her.png" download="her.png">
             <img src="assets/images/her.png" alt="her" />
           </a>
+        <a href="assets/images/2025-05-14 16.25.54.jpg" download="her_photo.png">
+            <img src="assets/images/2025-05-14 16.25.54.jpg" alt="her" />
+        </a> 
         </div>
         <button class="replay-button" onclick="location.href='index.html'">Replay from Start 🔁</button>
 
